fix code wrapping

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -165,6 +165,7 @@ body {
 .post-content pre {
     margin-bottom: 1.5em;
     line-height: 1.5em;
+    white-space: pre-wrap;
 }
 
 .post-content a {
